@@ -53,8 +53,6 @@ _mongoc_write_concern_get_gle (mongoc_write_concern_t *write_concern);
 const bson_t *
 _mongoc_write_concern_get_bson (mongoc_write_concern_t *write_concern);
 bool
-_mongoc_write_concern_is_default (const mongoc_write_concern_t *write_concern);
-bool
 _mongoc_write_concern_validate (const mongoc_write_concern_t *write_concern,
                                 bson_error_t *error);
 bool
